moved bg image to css and made button cursor pointer

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{
     background-repeat: no-repeat;
     color: white;
-    background-image: url('');
+    background-image: url('/images/rain3.jpg');
+    background-size: 100vw 110vh;
     height: 100vh;
     margin: 0;
 }
@@ -54,7 +55,7 @@ input{
     border-bottom: 1px solid white;
     background: none;
     outline: none;
-    width: 60%;
+    width: 80%;
     height: 30px;
     font-size: 20px;
 }
@@ -83,4 +84,8 @@ input{
 
  p{
      font-size: 1.5em;
+ }
+
+ button:hover,li:hover{
+    cursor: pointer;
  }
